--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "rmrevin/yii2-fontawesome": "~2.14",
         "yiisoft/yii2-jui": "^2.0",
         "kartik-v/yii2-widgets": "*",
-        "2amigos/yii2-file-upload-widget": "~1.0"
+        "2amigos/yii2-file-upload-widget": "~1.0",
+        "unclead/yii2-multiple-input": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
