--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "yiisoft/yii2-jui": "^2.0",
         "kartik-v/yii2-widgets": "*",
         "2amigos/yii2-file-upload-widget": "~1.0",
-        "unclead/yii2-multiple-input": "~1.0"
+        "unclead/yii2-multiple-input": "~1.0",
+        "kartik-v/yii2-social": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
