--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "kartik-v/yii2-widgets": "*",
         "2amigos/yii2-file-upload-widget": "~1.0",
         "unclead/yii2-multiple-input": "~1.0",
-        "kartik-v/yii2-social": "@dev"
+        "kartik-v/yii2-social": "@dev",
+        "2amigos/yii2-ckeditor-widget": "~1.0",
+        "yiisoft/yii2-imagine": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
